# Codex-Micro

./: .gitignore  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  microdeck_master_build_prompt.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
docs/: architecture.md  automation-model.md  releasing-windows.md  selector-maintenance.md  testing.md  troubleshooting.md
docs/research/: windows-codex-uia-spike.md
docs/superpowers/plans/: 2026-07-18-microdeck-mvp.md
docs/superpowers/specs/: 2026-07-18-microdeck-design.md
scripts/: build-offline-app.ps1  windows-build.ps1  windows-capture-uia.ps1  windows-demo.ps1  windows-dev.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/selectors/windows/: default.json
src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs
src-tauri/src/automation/: adapter.rs  mock.rs  mod.rs
src-tauri/src/automation/windows/: action_confirmation.rs  action_executor.rs  adapter.rs  element_query.rs  input_fallback.rs  locator.rs  mod.rs  selector_profile.rs  uia_client.rs  uia_worker.rs
src-tauri/src/core/: models.rs
src/api/: bridge.ts
src/app/: App.tsx
src/components/common/: StatusBadge.tsx
src/components/controller/: ActionKey.tsx  FloatingController.tsx  HardwareKey.tsx  HardwareKnob.tsx
src/components/dashboard/: AutomationLab.test.tsx  AutomationLab.tsx  Dashboard.tsx
src/state/: useMicroDeckStore.ts
src/styles/: global.css
src/types/: codex.ts
tests/: windows-capture-uia.test.ts
(+14 files in other folders)
