[package]
name = "microdeck"
version = "0.1.0"
description = "Unofficial desktop control surface for Codex"
authors = ["MicroDeck contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "microdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_UI_WindowsAndMessaging"
] }
